[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/summoner.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Entities/SummonerEnemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 9, 9 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 24.5153

[sub_resource type="CircleShape2D" id=4]
radius = 24.0

[sub_resource type="SegmentShape2D" id=5]

[node name="SummonerEnemy" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, 4 )
scale = Vector2( 8, 8 )
frames = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )

[node name="CollisionLine" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionLine"]
shape = SubResource( 5 )

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2( -88, -8 )

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2( 88, -8 )

[connection signal="area_entered" from="CollisionLine" to="." method="_on_Area2D2_area_entered"]
[connection signal="area_exited" from="CollisionLine" to="." method="_on_CollisionLine_area_exited"]
